# mqtts

./: .clang-format  .dockerignore  .gitignore  .gitmodules  ALLOCATOR_INTEGRATION_SUMMARY.md  CLAUDE.md  CMakeLists.txt  CODE_CONFLICTS_FIXED.md  Dockerfile  FINAL_IMPLEMENTATION_SUMMARY.md  HIGH_PERFORMANCE_TOPIC_TREE_SUMMARY.md  MEMORY_MANAGEMENT_BUG_FIX_SUMMARY.md  MQTT_SESSION_MANAGER_OPTIMIZATION.md  MQTT_Session_Allocator_Integration.md  README.md  README_ROUTER.md  SESSION_MANAGER_FIX.md  example_event_forwarding_config.yaml  mqtt_router.yaml  mqtts.yaml  mqtts_with_auth.yaml  mqtts_with_router.yaml  run_tests.py  run_websocket_tests.sh  simple_mqtt_bridge_test.cpp  simple_test.cpp  simple_websocket_mqtt_test.cpp  simple_websocket_test.cpp  test_allocator_error_codes.cpp  test_config.yaml  test_simple.cpp  websocket.yaml  websocket_integration_test.cpp
.devcontainer/: Dockerfile  devcontainer.json
3rd/: CMakeLists.txt  libco.patch
build_reorg/3rd/gperftools/: DartConfiguration.tcl  config.h
docs/: websocket_audit.md
scripts/: start-router.sh
src/: logger.cpp  logger.h  main.cpp  mqtt_allocator.cpp  mqtt_allocator.h  mqtt_auth_interface.h  mqtt_auth_manager.cpp  mqtt_auth_redis.cpp  mqtt_auth_redis.h  mqtt_auth_sqlite.cpp  mqtt_auth_sqlite.h  mqtt_config.cpp  mqtt_config.h  mqtt_coroutine_utils.h  mqtt_define.h  mqtt_event_forwarding_queue.h  mqtt_event_rpc_client.cpp  mqtt_event_rpc_client.h  mqtt_event_types.cpp  mqtt_events.proto  mqtt_memory_tags.h  mqtt_message_queue.h  mqtt_optimization_test.cpp  mqtt_packet.h  mqtt_parser.cpp  mqtt_parser.h  mqtt_process_monitor.cpp  mqtt_process_monitor.h  mqtt_protocol_handler.cpp  mqtt_protocol_handler.h  mqtt_router_rpc_client.cpp  mqtt_router_service.cpp  mqtt_router_service.h  mqtt_send_worker_pool.cpp  mqtt_send_worker_pool.h  mqtt_serialize_buffer.cpp  mqtt_server.cpp  mqtt_server.h  mqtt_session_allocator.cpp  mqtt_session_allocator.h  (+25 more)
src/app/: main.cpp  mqtt_router_main.cpp
src/auth/: mqtt_auth_interface.h  mqtt_auth_manager.cpp  mqtt_auth_redis.cpp  mqtt_auth_redis.h  mqtt_auth_sqlite.cpp  mqtt_auth_sqlite.h  mqtt_shared_mutex_compat.h
src/common/: logger.cpp  logger.h  mqtt_buffer.cpp  mqtt_buffer.h  mqtt_config.cpp  mqtt_config.h  mqtt_define.h  mqtt_string_utils.cpp  mqtt_string_utils.h
src/core/: mqtt_protocol_handler.cpp  mqtt_protocol_handler.h  mqtt_server.cpp  mqtt_server.h  mqtt_socket.cpp  mqtt_socket.h
src/events/: mqtt_event_forwarding_queue.cpp  mqtt_event_forwarding_queue.h  mqtt_event_forwarding_service.cpp  mqtt_event_forwarding_service.h  mqtt_event_rpc_client.cpp  mqtt_event_types.h
src/forwarding/: forwarding_connection_pool.cpp  forwarding_connection_pool.h  mqtt_forwarding.proto  mqtt_forwarding_rpc_client.cpp  mqtt_forwarding_rpc_client.h  mqtt_forwarding_service.cpp  mqtt_forwarding_service.h
src/http/: http_message.cpp  http_message.h  http_parser.cpp  http_parser.h
src/memory/: mqtt_allocator.cpp  mqtt_allocator.h  mqtt_memory_tags.h
src/protocol/: mqtt_parser.cpp  mqtt_parser.h  mqtt_serialize_buffer.h
src/router/: mqtt_router.proto  mqtt_router_rpc_client.cpp  mqtt_router_rpc_client.h  mqtt_router_service.cpp  mqtt_router_service.h  router_auth_store.cpp  router_node_registry.cpp
src/session/: mqtt_process_monitor.cpp  mqtt_process_monitor.h  mqtt_send_worker_pool.cpp  mqtt_session_info.cpp  mqtt_session_info.h  mqtt_session_manager_v2.cpp  mqtt_session_manager_v2.h
src/topic/: mqtt_topic_tree.cpp  mqtt_topic_tree.h
src/utils/: mqtt_coroutine_utils.h
src/websocket/: websocket_frame.cpp  websocket_handler_adapter.cpp  websocket_mqtt_bridge.cpp  websocket_mqtt_bridge.h  websocket_protocol_handler.cpp  websocket_protocol_handler.h
tools/: auth_admin.cpp  performance_analyzer.cpp
unittest/: CMakeLists.txt  coroutine_test_helper.h  test_connect.cpp  test_debug_properties.cpp  test_debug_serialization.cpp  test_http_parser.cpp  test_logger.h  test_mqtt_allocator.cpp  test_mqtt_auth_manager.cpp  test_mqtt_auth_redis.cpp  test_mqtt_auth_sqlite.cpp  test_mqtt_buffer.cpp  test_mqtt_edge_cases.cpp  test_mqtt_forwarding_pool.cpp  test_mqtt_parser.cpp  test_mqtt_performance.cpp  test_mqtt_protocol_comprehensive.cpp  test_mqtt_router_rpc_client.cpp  test_mqtt_router_service.cpp  test_mqtt_serialization_comprehensive.cpp  test_mqtt_session_manager_memory.cpp  test_mqtt_session_manager_memory_simple.cpp  test_mqtt_session_manager_optimization.cpp  test_mqtt_session_manager_router.cpp  test_mqtt_topic_tree.cpp  test_mqttv5_client.cpp  test_mqttv5_protocol.cpp  test_publish_serialization.cpp  test_qos_reply.cpp  test_send_publish.cpp  test_session_manager_allocator.cpp  test_session_manager_stress.cpp  test_simple_memory.cpp  test_websocket_frame.cpp  test_websocket_mqtt_bridge.cpp  test_websocket_protocol_handler.cpp
